# giglz

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  app.py  config.py  db.py  db_models.py  models.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  schemas.py  show_extractor.py
docs/: gen_ref_pages.py  index.md
extension/: README.md  content.js  manifest.json  popup.css  popup.html  popup.js
migrations/versions/: 4a5c286afcfa_.py  a84554b7ca53_initial_schema.py  a84554b7ca53_playlist_hierarchy.py  aedd018426a8_initial_db.py
routes/: api.py  auth.py  board.py  imports.py  playlists.py  shows.py  spotify.py
scripts/: check-migrations.sh
services/: auth.py  board.py  email.py  imports.py  loves.py  playlists.py  scouting.py  shows.py
spotify/: __init__.py  client.py  models.py  oauth.py  token.py  user_client.py
static/css/: main.css  output.css
static/js/: api.js  player.js
templates/: base.html  home.html  import.html  macros.html  showlist.html  showlists.html  shows.html
templates/auth/: check_email.html  error.html  login.html
templates/board/: index.html
templates/imports/: upload.html
templates/playlists/: scouting.html
templates/shows/: add.html  list.html
tests/: conftest.py  test_app.py  test_auth.py  test_csv_import.py  test_db.py  test_imports.py  test_love_api.py  test_models.py  test_playlists.py  test_shows.py  test_spotify.py  test_spotify_client.py
v1/: README.md  biome.json  extensions.py  mkdocs.yml  models.py  pyproject.toml  url_utils.py
v1/extension/: manifest.json
v1/spotify/: models.py  token.py
v1/static/js/: api.js  import.js  player.js
v1/templates/: base.html  playlist.html  showlists.html  shows.html
v1/tests/: test_app.py  test_csv_import.py  test_db.py  test_show_extractor.py  test_spotify_client.py  test_url_utils.py
