[project]
name = "giglz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "resend>=2.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
