[project]
name = "giglz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.3",
    "resend>=2.23.0",
    "spotipy>=2.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
